Package.json changes

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index",
+    "start": "node index",
+    "local": "nodemon index",
     "dev": "concurrently \"npm start\" \"cd ../frontend & npm start\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
